[project]
name = "adaptive-prompt-enhancement-system"
version = "1.0.0"
description = "Intelligent prompt optimization with ML-driven rule learning."
requires-python = ">=3.11"

dependencies = [
  # Core Web Framework & API
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.24.0",
  "websockets>=15.0.0,<16.0.0",
  "aiofiles>=24.0.0",
  "aiohttp>=3.9.0",
  "rich>=13.7.0",
  "textual>=0.80.0",

  # Data Validation & Configuration
  "pydantic-settings>=2.10.1",
  "jsonschema>=4.20.0",
  "pyyaml>=6.0.0",
  "orjson>=3.9.0",
  "msgspec>=0.18.0",

  # Database & Persistence
  "asyncpg>=0.30.0",
  # psycopg[binary] and psycopg_pool removed - standardized on asyncpg per DATABASE_CONSOLIDATION.md
  "sqlmodel>=0.0.24",
  "greenlet>=3.2.3",

  # Caching & Redis
  "coredis>=5.0.1",
  "fakeredis>=2.25.0",

  # Core ML Stack
  "scikit-learn>=1.4.0",
  "numpy>=2.2.0,<2.3.0",
  "pandas>=2.0.0",
  "scipy>=1.10.0",
  "optuna>=3.5.0",
  "mlflow>=3.0.0,<4.0.0",

  # Advanced ML Libraries
  "hdbscan>=0.8.29",
  "mlxtend>=0.23.0",
  "causal-learn>=0.1.3.6",

  # NLP & Text Processing
  "sentence-transformers>=2.5.0",  # Includes transformers as dependency
  "nltk>=3.8.0",
  "textstat>=0.7.0",

  # Privacy & Security (Production Excellence)
  "cryptography>=41.0.0",
  "adversarial-robustness-toolbox>=1.15.0",

  # MCP Server & Rule Engine
  "mcp>=1.10.1",
  # mcp-context-sdk removed - package not found/misnamed

  # OpenTelemetry Observability Stack (2025 Best Practices)
  "opentelemetry-api>=1.33.0",
  "opentelemetry-sdk>=1.33.0",
  "opentelemetry-semantic-conventions>=0.49b0",
  "opentelemetry-exporter-otlp>=1.33.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.33.0",
  "opentelemetry-exporter-otlp-proto-http>=1.33.0",
  "opentelemetry-exporter-prometheus>=0.57b0",
  "opentelemetry-instrumentation>=0.49b0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-asyncpg>=0.49b0",
  "opentelemetry-instrumentation-redis>=0.49b0",
  "opentelemetry-instrumentation-aiohttp-client>=0.49b0",
  # opentelemetry-instrumentation-psycopg removed - no longer using psycopg driver
  # opentelemetry-instrumentation-httpx removed - standardized on aiohttp for all HTTP client operations
  "opentelemetry-instrumentation-requests>=0.57b0",
  "opentelemetry-propagator-b3>=1.33.0",
  "opentelemetry-propagator-jaeger>=1.33.0",

  # Performance & Compression
  "lz4>=4.0.0",
  "uvloop>=0.19.0",

  # System Monitoring & Health
  "psutil>=5.9.0",
  "watchdog>=4.0.0",

  # Architecture & Dependency Injection
  "dependency-injector>=4.40.0",
  "import-linter>=2.0.0",

  # Network & DNS - dnspython removed as no DNS resolution code found
]

[project.optional-dependencies]
dev = [
  # Code Quality & Linting
  "pyright>=1.1.0",
  "ruff>=0.6.0",

  # Type Stubs
  "types-redis",
  "types-aiofiles>=24.1.0.20250708",
  "types-cffi>=1.17.0.20250523",
  "types-protobuf>=6.30.2.20250703",
  "types-pyOpenSSL>=24.1.0.20240722",
  "types-PyYAML>=6.0.12.20250516",
  "types-requests>=2.32.4.20250611",
  "types-setuptools>=80.9.0.20250529",

  # Development Tools
  # httpx removed - standardized on aiohttp for all HTTP client operations
  # ipython and jupyter removed - not used in development workflow
]

test = [
  # Core Testing Framework
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0.0",
  "pytest-timeout>=2.3.0",
  "pytest-benchmark>=4.0.0",
  "pytest-mock>=3.12.0",

  # Real Behavior Testing (2025 Best Practices)
  "pytest-xdist>=3.3.0",

  # Database Testing & Migrations

  # Logging & Debugging for Tests
  "structlog>=23.1.0",
  "colorlog>=6.7.0",
]

docs = [
  # Documentation Generation - Currently using alternative documentation approach
  # Sphinx stack removed as not actively used
]

security = [
  # Security Scanning & Analysis - Tools not integrated into CI/CD pipeline
  # Security scanning tools removed as not actively used
]

[project.scripts]
# Ultra-minimal 3-command CLI entry point
apes = "prompt_improver.cli.clean_cli:app"

[tool.ruff]
# Target Python 3.11+ with ML project awareness
target-version = "py312"
line-length = 88
indent-width = 4

# Source root for proper import resolution
src = ["src"]

# Comprehensive exclusions for ML project
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg",
    ".nox", ".pants.d", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__",
    "_build", "buck-out", "build", "dist", "node_modules", "venv",

    # ML-specific exclusions
    "ml",                    # Legacy ML directory
    "mlruns",               # MLflow experiments (archived)
    "optuna_studies",       # Hyperparameter optimization (archived)
    "*.egg-info",           # Package metadata
    "**/__pycache__",       # Python cache
    "**/.*_cache",          # Various cache directories

    # Archive exclusions
    ".archive",              # Archived files
    "tests/deprecated",      # Deprecated tests (temporary)
]

# Enable preview mode for latest features
preview = true

[tool.ruff.lint]
# Curated rule selection based on official recommendations
select = [
    # Core Python best practices
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort

    # Code quality & maintainability
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules

    # Naming, exceptions, datetime safety
    "N",      # pep8-naming
    "TRY",    # tryceratops
    "DTZ",    # flake8-datetimez

    # Security & performance
    "S",      # bandit
    "PERF",   # perflint

    # Async patterns
    "ASYNC",  # flake8-async

    # Documentation & type hints
    "D",      # pydocstyle
    "ANN",    # flake8-annotations

    # Import organization
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports

    # Error handling
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "RET",    # flake8-return

    # Code complexity
    "C90",    # mccabe
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
    "PLE",    # pylint errors

    # Unused code detection
    "F401",   # unused-import
    "F841",   # unused-variable
    "ARG",    # flake8-unused-arguments

    # Additional modern practices
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
]

# ML specific ignores
ignore = [
    # Line length handled by formatter
    "E501",   # line-too-long

    # ML experiment patterns
    "T201",   # print-found (needed for ML debugging)
    "S101",   # assert-used (common in ML validation)
    "PLR0913", # too-many-arguments (ML models often have many params)
    "PLR0915", # too-many-statements (ML pipelines can be complex)

    # Legacy patterns (no longer needed)

    # Documentation (gradual adoption)
    "D100",   # undocumented-public-module
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package

    # Type annotations (gradual adoption)
    "ANN001", # missing-type-annotation-for-function-argument
    "ANN002", # missing-type-annotation-for-args
    "ANN003", # missing-type-annotation-for-kwargs
    "ANN201", # missing-return-type-annotation

    # Async patterns
    "ASYNC109", # async-function-with-timeout (false positives)

    # Performance (carefully considered)
    "PERF203", # try-except-in-loop (sometimes necessary in ML)

    # TODO/FIXME patterns (transitional)
    "TD002",   # missing-todo-author (gradual adoption)
    "TD003",   # missing-todo-link (gradual adoption)
    "FIX002",  # line-contains-fixme (allow for development)
]

# Enable auto-fixing for safe rules
fixable = ["ALL"]
unfixable = [
    "F401",   # unused-import (manual review preferred)
    "F841",   # unused-variable (manual review preferred)
    "T20",    # print statements (manual review for ML debugging)
]

# Complexity limits
[tool.ruff.lint.mccabe]
max-complexity = 12  # Slightly higher for ML pipelines

[tool.ruff.lint.pylint]
max-args = 8         # Higher for ML model constructors
max-branches = 15    # Higher for ML decision trees
max-returns = 8      # Higher for complex ML functions
max-statements = 60  # Higher for ML pipelines

# File-specific rule customization
[tool.ruff.lint.per-file-ignores]
# Test files
"tests/**/*.py" = [
    "S101",   # assert-used (expected in tests)
    "PLR2004", # magic-value-comparison (test values)
    "ANN",    # missing-type-annotation (less critical in tests)
    "D",      # pydocstyle (documentation less critical)
    "ARG",    # unused-arguments (fixtures often unused)
    "FBT",    # boolean-trap (test flags are common)
    "PTH",    # use-pathlib (test paths can be strings)
]

# Configuration files
"**/config/*.py" = [
    "S105",   # hardcoded-password-string (config constants)
    "S106",   # hardcoded-password-func-arg
]

# Legacy ML bridge (transitional)

# Main application entry points
"src/prompt_improver/main.py" = [
    "D100",   # Allow undocumented main module
    "T201",   # Allow print statements for startup/shutdown logging
]

# Service files (ML debugging and error logging)
"src/prompt_improver/services/*.py" = [
    "T201",   # Allow print statements for debugging ML processes
]

# Database models
"src/prompt_improver/database/*.py" = [
    "A003",   # builtin-attribute-shadowing (SQLAlchemy patterns)
]

# MCP server
"src/prompt_improver/mcp_server/*.py" = [
    "ANN401", # any-type (MCP protocol flexibility)
]

[tool.ruff.lint.isort]
# Import organization
known-first-party = ["prompt_improver"]
known-third-party = [
    "sqlmodel", "asyncpg",
    "scikit-learn", "optuna", "mlflow", "pandas", "numpy",
    "sentence-transformers"
]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
# Google-style docstrings for ML projects
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# Optimize type checking imports
runtime-evaluated-base-classes = ["sqlmodel.SQLModel"]

[tool.ruff.lint.flake8-annotations]
# Gradual type annotation adoption
# Annotation style preferences for __init__ methods
suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
# Allow zip() without strict parameter for Python < 3.10 compatibility
extend-immutable-calls = []

[tool.ruff.lint.flake8-tidy-imports]
# Ban relative imports
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
# Ignore unused arguments in specific patterns
ignore-variadic-names = true

[tool.ruff.format]
# Modern Python formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72

[tool.pytest.ini_options]
minversion = "8.2.0"

# Test markers moved to comprehensive section below

# Enhanced testing configuration with coverage and performance monitoring
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",  # Shorter traceback format for faster output
    "--durations=10",  # Show 10 slowest tests
    "--maxfail=10",  # Stop after 10 failures for faster feedback
    # Performance optimization flags
    "--disable-warnings",  # Disable warnings for faster execution
    # Import mode for better module resolution (2025 best practice)
    "--import-mode=importlib",
    # Temporarily disable coverage to focus on test functionality
    # "--cov=src",
    # "--cov-branch",
    # "--cov-report=term-missing:skip-covered",
    # "--cov-report=html:htmlcov",
    # "--cov-fail-under=85",
]

testpaths = ["tests"]  # All tests are under tests/ directory
pythonpath = ["src"]  # Add src to Python path for proper imports

# Performance monitoring (requires pytest-timeout plugin)
timeout = 30  # 30 second timeout for tests to prevent hanging
timeout_method = "thread"

# Enable automatic async test detection
asyncio_mode = "auto"

# Default event loop scopes for consistent behavior (2025 best practice)
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

# Enhanced test categorization with reorganized structure
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests requiring real components",
    "slow: marks tests as slow-running (>1 second)",
    "performance: marks tests that validate performance requirements",
    "unit: marks tests as pure unit tests with maximum isolation",
    "benchmark: marks tests for pytest-benchmark performance testing",
    "ml_contracts: marks tests for ML model contract validation",
    "property_based: marks tests using Hypothesis property-based testing",
    "metamorphic: marks tests for ML metamorphic property validation",
    "ml_performance: marks tests for ML component performance characterization",
    "stress: marks tests as stress/load tests for high-volume scenarios",
    "ml_data_validation: marks tests for ML data quality validation",
    "database_constraints: marks tests for database constraint validation",
    "database_transactions: marks tests for database transaction integrity",
    "database_performance: marks tests for database operation performance",
    "database_schema: marks tests for database schema validation",
    "redis_performance: marks tests for Redis performance characteristics",
    "cli_file_io: marks tests for CLI file system operations",
    "cli_error_scenarios: marks tests for CLI error handling",
    "cli_performance: marks tests for CLI performance characteristics",
    "cli_integration: marks tests for CLI end-to-end workflows",
    "regression: marks tests for regression prevention",
    "deprecated: marks tests that are temporary/legacy and may be removed",
    "error_handling: marks tests for error handling and edge cases",
    "real_behavior_validation: marks tests for validating real behavior migration",
]

# Test filtering
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.importlinter]
# Import Linter configuration for architectural boundary enforcement (2025 best practices)
root_packages = ["prompt_improver"]
include_external_packages = true

# Contract 1: Circular Import Detection (Primary Goal)
[[tool.importlinter.contracts]]
name = "Circular Import Prevention"
type = "independence"
modules = [
    "prompt_improver.**"
]
unmatched_ignore_imports_alerting = "warn"

# Contract 2: Clean Architecture Layers (Strict Layering)
[[tool.importlinter.contracts]]
name = "Clean Architecture Layers"
type = "layers"
layers = [
    "prompt_improver.core",
    "prompt_improver.shared",
    "prompt_improver.domain | prompt_improver.ml | prompt_improver.rule_engine",
    "prompt_improver.application",
    "prompt_improver.infrastructure | prompt_improver.database | prompt_improver.performance | prompt_improver.security",
    "prompt_improver.presentation | prompt_improver.api | prompt_improver.cli | prompt_improver.mcp_server"
]
ignore_imports = [
    # Allow core utilities to be imported from anywhere
    "prompt_improver.** -> prompt_improver.core.**",
    "prompt_improver.** -> prompt_improver.shared.**",
    # Allow dependency injection patterns
    "prompt_improver.** -> prompt_improver.core.di.**",
    # Allow common types and protocols
    "prompt_improver.** -> prompt_improver.core.types",
    "prompt_improver.** -> prompt_improver.core.protocols.**"
]
unmatched_ignore_imports_alerting = "warn"

# Contract 3: Domain Layer Independence (Hexagonal Architecture)
[[tool.importlinter.contracts]]
name = "Domain Independence"
type = "independence"
modules = [
    "prompt_improver.domain",
    "prompt_improver.ml",
    "prompt_improver.rule_engine"
]
unmatched_ignore_imports_alerting = "warn"

# Contract 4: Infrastructure Boundaries (Dependency Inversion)
[[tool.importlinter.contracts]]
name = "Infrastructure Boundaries"
type = "forbidden"
source_modules = [
    "prompt_improver.domain",
    "prompt_improver.ml",
    "prompt_improver.rule_engine",
    "prompt_improver.core"
]
forbidden_modules = [
    "prompt_improver.database",
    "prompt_improver.api",
    "prompt_improver.cli",
    "prompt_improver.mcp_server",
    "prompt_improver.performance.monitoring",
    "prompt_improver.infrastructure",
    "prompt_improver.security",
    "prompt_improver.cache",
    "prompt_improver.utils",
    "prompt_improver.tui"
]
ignore_imports = [
    # Allow protocols and interfaces
    "prompt_improver.domain -> prompt_improver.core.protocols.**",
    "prompt_improver.ml -> prompt_improver.core.protocols.**",
    "prompt_improver.rule_engine -> prompt_improver.core.protocols.**",
    # Allow shared types
    "prompt_improver.** -> prompt_improver.shared.types.**",
    "prompt_improver.** -> prompt_improver.shared.interfaces.**"
]
unmatched_ignore_imports_alerting = "warn"

# Contract 5: Presentation Layer Isolation
[[tool.importlinter.contracts]]
name = "Presentation Layer Isolation"
type = "forbidden"
source_modules = [
    "prompt_improver.api",
    "prompt_improver.cli",
    "prompt_improver.mcp_server",
    "prompt_improver.tui"
]
forbidden_modules = [
    # Presentation layers should not directly access each other
    "prompt_improver.api",
    "prompt_improver.cli",
    "prompt_improver.mcp_server",
    "prompt_improver.tui"
]
allow_indirect_imports = false
unmatched_ignore_imports_alerting = "warn"

# Contract 6: External Dependencies Control
[[tool.importlinter.contracts]]
name = "External Dependencies Control"
type = "forbidden"
source_modules = [
    "prompt_improver.domain",
    "prompt_improver.core"
]
forbidden_modules = [
    # Prevent domain/core from depending on heavy external libraries
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "asyncpg",
    "redis",
    "pandas",
    "numpy",
    "scikit-learn",
    "optuna",
    "mlflow"
]
ignore_imports = [
    # Allow typing imports
    "prompt_improver.** -> typing",
    "prompt_improver.** -> typing_extensions",
    # Allow standard library
    "prompt_improver.** -> datetime",
    "prompt_improver.** -> uuid",
    "prompt_improver.** -> enum",
    "prompt_improver.** -> dataclasses",
    "prompt_improver.** -> abc",
    "prompt_improver.** -> pathlib",
    "prompt_improver.** -> logging"
]
unmatched_ignore_imports_alerting = "warn"

[dependency-groups]
dev = [
    "opentelemetry-exporter-otlp>=1.36.0",
    "optuna-integration[sklearn]>=4.4.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "typer>=0.16.0",
]

